bootstrap/test/cases/14_finally_nested.koral
// EXPECT-ERROR: 'finally' is not allowed inside 'finally'

let f() Void = {
    finally {
        finally {} // error: nested finally
    }
}
